# Hiking_temp_logger

./: .gitignore  CMakeLists.txt  Hiking_temp_logger.cpp  reading_power_type_analizer.py  rp2040_config.h  samples.txt
lib/lvgl-release-v9.2/: lv_conf.h
lib/lvgl-release-v9.2/env_support/cmsis-pack/: README.md  lv_conf_cmsis.h
lib/lvgl-release-v9.2/examples/get_started/: lv_example_get_started_1.c
lib/lvgl-release-v9.2/examples/styles/: lv_example_style_1.c  lv_example_style_8.c
lib/lvgl-release-v9.2/src/misc/: lv_color.h
lib/temperature/: temp_shtc3.cpp  temp_shtc3.h  temp_shtc3_tmp.h
